[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI_elements/banner_2.png" type="Texture2D" id=1]
[ext_resource path="res://Templates/NpcInventorySlot.gd" type="Script" id=2]
[ext_resource path="res://Font/Roboto-Bold.ttf" type="FontFile" id=3]

[sub_resource type="FontFile" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Inv" type="TextureRect"]
show_behind_parent = true
offset_right = 290.0
offset_bottom = 70.0
custom_minimum_size = Vector2( 290, 70 )
texture = ExtResource( 1 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
expand = true
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IconBackground" type="TextureRect" parent="TextureRect/HBoxContainer"]
offset_right = 62.0
offset_bottom = 62.0
custom_minimum_size = Vector2( 62, 0 )
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="TextureRect/HBoxContainer/IconBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
expand = true

[node name="Tween" type="Tween" parent="TextureRect/HBoxContainer/IconBackground/Icon"]

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
offset_left = 66.0
offset_right = 282.0
offset_bottom = 62.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
offset_right = 216.0
offset_bottom = 24.0
theme_override_fonts/font = SubResource( 1 )
align = 1

[node name="Cost" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
offset_top = 28.0
offset_right = 216.0
offset_bottom = 52.0
theme_override_fonts/font = SubResource( 1 )
align = 1

[node name="Stack" type="RichTextLabel" parent="TextureRect"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -31.0
offset_right = -12.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 200, 60 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
text = "Skriver långt hej hej testar olika ord och öva på att skriva nu ändå för att passa på osv osv osv."

[connection signal="gui_input" from="TextureRect" to="TextureRect" method="_on_Icon_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="TextureRect" method="_on_Icon_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="TextureRect" method="_on_Icon_mouse_exited"]
